# autoresearch-rocm

./: .gitignore  README.md  compare_backends.py  compare_datasets.py  convert_dataset.py  dashboard.py  monitor.py  prepare.py  program.md  pyproject.toml  run_suite.py  train.py  train_cuda.py  train_rocm.py
backends/: __init__.py
docs/: evaluating-results.md
tui/: app.py  credentials.py  git_manager.py  hardware.py  headless.py  llm_backend.py  orchestrator.py  resilience.py  results.py
